# Real-time-Audio-Front-end-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  biquad_test
.github/workflows/: ci.yml
arm-cortexM/: linker.ld  startup.c
cmake/: CompilerWarnings.cmake  toolchain_arm_cortex_m.cmake  toolchain_riscv.cmake
docs/: .$design.drawio.bkp  design.drawio  design.md  integration_note.md  performance.md  q_formats.md  readme_interview.md
examples/: CMakeLists.txt  host_file_process.c  main.c  rtos_isr_skeleton.c  test_init_simple.c
include/rtafe/: fe_api.h  fe_config.h  fe_features.h  fe_types.h
ref/: fixed_point_model.py  generate_tables.py  generate_test_sound.py  generate_vectors.py  pipeline.py
src/: CMakeLists.txt  fe_api.c  fe_init.c  fe_init.h  main.c
src/biquad/: biquad.h
src/features/: energy.c  log_mel.c  log_mel.h
src/math/: fixedpoint.c  fixedpoint.h  tables.c  tables.h
src/module/: beamformer.c  dc_removal.c  dc_removal.h  fft.c  noise_suppress.c  noise_suppress.h  preemphasis.c  window.c  window.h
src/pipeline/: aec_stub.c  aec_stub.h  agc.c  agc.h  beamformer.h  dc_removal.c  dc_removal.h  fft.c  fft.h  gain_smooth.c  gain_smooth.h  ifft.c  ifft.h  noise_suppress.c  noise_suppress.h  preemphasis.c  preemphasis.h  window.c  window.h
src/platform/: platform.h  platform_arm_cmsis.c  platform_generic.c  platform_riscv_p.c
tests/: CMakeLists.txt  test_agc.c  test_api.c  test_dc_remov.c  test_dc_removal.c  test_fft_ifft.c  test_noise_suppress.c  test_pipeline_e2e.c  test_preemphasis.c  test_scratch_layout.c  test_sincos  test_sincos.c
tests/unity/: .gitkeep
utils/: fixedpoint.h  tables.h  utils.h
